--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body>
+	
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="http://jackblanc.com">Jack Blanc</a></h1>
+						<h1><a href="http://jackblanc.com">Finals Grade Calculator</a></h1>
 						<!-- REMOVE THIS TEMPORARILY
 						<nav id="nav">
 							<ul>
@@ -64,7 +65,21 @@
 							</div>
 						</section>
 					</article>
-
+					
+				<!-- Ad -->
+				<div align="center">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- Finals Calc Auto -->
+					<ins class="adsbygoogle"
+						 style="display:block"
+						 data-ad-client="ca-pub-8975488603526764"
+						 data-ad-slot="8579905330"
+						 data-ad-format="auto"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
+				
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
@@ -73,7 +88,7 @@
 							<li><a href="https://www.linkedin.com/in/blancjack" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Jack Blanc</li>
+							<li><a href="http://jackblanc.com">&copy; Jack Blanc</a></li>
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
 						</ul>
