--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 							<li><a href="https://www.linkedin.com/in/blancjack" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li><a href="http://jackblanc.com">&copy; Jack Blanc</a></li>
+							<!-- no link for now... <li><a href="http://jackblanc.com">&copy; Jack Blanc</a></li> -->
+							<li>&copy; Jack Blanc</li>
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
 						</ul>
