--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-			<header id="header">
-					<h1><a href="http://jackblanc.com">Finals Grade Calculator</a></h1>
-					<!-- REMOVE THIS TEMPORARILY
-					<nav id="nav">
-						<ul>
-							<li class="special">
-								<a href="#menu" class="menuToggle"><span>Menu</span></a>
-								<div id="menu">
-									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="finals.html">Finals Calculator</a></li>
-										<li><a href="elements.html">Elements</a></li>
-									</ul>
-								</div>
-							</li>
-						</ul>
-					</nav>
-					-->
+			<header id="header" class="alt">
+				<h1><a href="index.html">Jack Blanc</a></h1>
+				<nav id="nav">
+					<ul>
+						<li class="special">
+							<a href="#menu" class="menuToggle"><span>Menu</span></a>
+							<div id="menu">
+								<ul>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="http://finalscalc.com">Finals Calculator</a></li>
+									<li><a href="pages/programmingexp.html">Programming Experience</a></li>
+									<li><a href="pages/xc.html">My Cross Country Transformation</a></li>
+									<li><a href="pages/rugby.html">Rugby</a></li>
+									<li><a href="pages/clubs.html">My Clubs</a></li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</nav>
 			</header>
 
 			
@@ -101,8 +101,7 @@
 					<li><a href="https://www.linkedin.com/in/blancjack" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<!-- no link for now... <li><a href="http://jackblanc.com">&copy; Jack Blanc</a></li> -->
-					<li>&copy; Jack Blanc</li>
+					<li><a href="http://jackblanc.com">&copy; Jack Blanc</a></li>
 					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					<li>Images: <a href="http://unsplash.com">Unsplash</a></li>
 				</ul>
