--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<a href="#menu" class="menuToggle"><span>Menu</span></a>
 							<div id="menu">
 								<ul>
-									<li><a href="index.html">Home</a></li>
+									<li><a href="http://jackblanc.com">Home</a></li>
 									<li><a href="http://finalscalc.com">Finals Calculator</a></li>
 									<li><a href="pages/programmingexp.html">Programming Experience</a></li>
 									<li><a href="pages/xc.html">My Cross Country Transformation</a></li>
@@ -61,18 +61,16 @@
 				</header>
 				
 				<!-- Ad -->
-				<div align="center">
-					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<!-- Finals Calc Auto -->
-					<ins class="adsbygoogle"
-						 style="display:block"
-						 data-ad-client="ca-pub-8975488603526764"
-						 data-ad-slot="8579905330"
-						 data-ad-format="auto"></ins>
-					<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
-				</div>
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- Finals Calc Auto -->
+				<ins class="adsbygoogle"
+					 style="display:block"
+					 data-ad-client="ca-pub-8975488603526764"
+					 data-ad-slot="8579905330"
+					 data-ad-format="auto"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
 				
 				<section class="wrapper style5">
 					<div class="inner">
