--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 			<!-- Header -->
 			<header id="header" class="alt">
-				<h1><a href="index.html">Jack Blanc</a></h1>
-				<nav id="nav">
+			  <h1><a href="index.html"><strong>FinalsCalc.com</strong></a></h1>
+			  <nav id="nav">
 					<ul>
 						<li class="special">
 							<a href="#menu" class="menuToggle"><span>Menu</span></a>
@@ -53,7 +53,7 @@
 			<article id="main">
 				<header>
 					<h2>Finals Grade Calculator</h2>
-					<p>Use this form below to calculate the grade you need on a final to keep a desired grade in that class. </p>
+					<p>Calculate the grades you need to get on your finals!</p>
 				</header>
 				
 				<!-- Ad -->
