--- a/index.html
+++ b/index.html
@@ -57,16 +57,18 @@
 				</header>
 				
 				<!-- Ad -->
-				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-				<!-- Finals Calc Auto -->
-				<ins class="adsbygoogle"
-					 style="display:block"
-					 data-ad-client="ca-pub-8975488603526764"
-					 data-ad-slot="8579905330"
-					 data-ad-format="auto"></ins>
-				<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
-				</script>
+				<div align="center">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- Finals Calc Auto -->
+					<ins class="adsbygoogle"
+						 style="display:block"
+						 data-ad-client="ca-pub-8975488603526764"
+						 data-ad-slot="8579905330"
+						 data-ad-format="auto"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
 				
 				<section class="wrapper style5">
 					<div class="inner">
